--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>
