use JetBrains mono

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
     <link
-      href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
   </head>
