--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
   </head>
   <body>
     <h1>
-      <span id="minutes">00</span>:<span id="sec">00</span>:<span id="millisec"
-        >00</span
-      >
+      <span id="minutes">00</span>:<span id="sec">00</span> 
+      <span id="millisec">0</span>
     </h1>
 
     <br /><br />
 
-    <div>
+    <div class="buttons">
       <button id="start">START</button>
       <button id="stop" disabled>STOP</button>
       <button id="reset" disabled>RESET</button>
