Minor design fixes (#1)
* minor fixes

* Dont't set millisec to 00 on reset

* Add stopwatch title to page

* Remove duplicate font family

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Stopwatch</title>
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap"
       rel="stylesheet"
@@ -13,14 +13,13 @@
   </head>
   <body>
     <h1>
-      <span id="minutes">00</span>:<span id="sec">00</span>:<span id="millisec"
-        >00</span
-      >
+      <span id="minutes">00</span>:<span id="sec">00</span> 
+      <span id="millisec">0</span>
     </h1>
 
     <br /><br />
 
-    <div>
+    <div class="buttons">
       <button id="start">START</button>
       <button id="stop" disabled>STOP</button>
       <button id="reset" disabled>RESET</button>
